Some changes commit 3

--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- swagger -->
-		<!-- Замените springfox на springdoc-openapi -->
+
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version> <!-- Проверьте актуальную версию -->
+			<version>2.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>9.0.0</version>
 		</dependency>
 
 
