--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,24 @@
-spring.application.name=coffeeMachine
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=scorpion411
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
+
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
+spring.flyway.user=postgres
+spring.flyway.password=scorpion411
+spring.flyway.driver-class-name=org.postgresql.Driver
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
 
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/coffee_db
-spring.datasource.username=postgres
-spring.datasource.password=scorpion411
-spring.datasource.driver-class-name=org.postgresql.Driver
+springdoc.api-docs.path=/docs/doc
+springdoc.swagger-ui.path=/docs/doc-ui
 
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
+logging.level.root=info
