--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=scorpion411
+spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
-spring.flyway.password=scorpion411
+spring.flyway.password=postgres
 spring.flyway.driver-class-name=org.postgresql.Driver
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
