Some changes commit 6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.flyway.enabled=true
 server.port=8080
 
 springdoc.api-docs.path=/docs/doc
-springdoc.swagger-ui.path=/docs/doc-ui
+springdoc.swagger-ui.path=/docs/ui
 
 logging.level.root=info
